--- a/src/assets/scss/utils/vars.scss
+++ b/src/assets/scss/utils/vars.scss
@@ -10,6 +10,7 @@ $font-site: 'Product Sans', Arial, sans-serif;
 $color-text: #3c3c3b;
 $color-grey: #979797;
 $color-green: #369b58;
+$color-dark-green: #328a4f;
 $color-orange: #f28f16;
 $color-orange-dark: #e08516;
 $color-red: #d60b52;
