--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -1,22 +1,22 @@
 extends ../layout/main
 
 block variables
-	- var title = 'Содержание';
+	- var title = 'Content';
 	- 
 		var pagelist = [
-			{href: 'main.html',name:'Главная'},
-			{href: 'tipografika.html',name:'Типографика'},
+			{href: 'food-menu.html',name:'Food menu'},
+			{href: 'food-menu-popup.html',name:'food menu popup + order'},
+			{href: 'food-menu-cards.html',name:'food menu cards'},
+			{href: 'typography.html',name:'Typography'},
 		];
 
 block content
 	section
 		.container
-			.row
-				.col-12
-					h1 содержание
-					ul
-						each page in pagelist
-							li
-								a(href=page.href,)= page.name
+			h1 Content
+			ul
+				each page in pagelist
+					li
+						a(href=page.href,)= page.name
 
 
