--- a/src/pug/utils/mixins.pug
+++ b/src/pug/utils/mixins.pug
@@ -4,21 +4,15 @@ mixin h1(v)
 			.col-12
 				h1= v
 
-
-mixin breadcrumbs(links)
-	- var len=links.length
-	.container.d-none.d-md-block
-		.row
-			.col-12
-				ul.breadcrumb
-					- var i=0
-					while i < len-1
-						li.breadcrumb__item
-							a(href=links[i].href).breadcrumb__link=links[i].name
-						- i++
-					li.breadcrumb__item
-						span=links[i].name
-
 mixin svg(icon, name_class, width,height)
 	svg.icon(class=name_class?name_class:'', width=width?width:'', height=height?height:'')
 		use(xlink:href='assets/sprites/sprite.svg#'+icon)
+
+mixin dropDown(data)
+	.dropdown(class=data.size=='big'?'dropdown_big':'').hover
+		.dropdown__head= data.head
+			span.dropdown__arr
+				+svg('ic-arrow-down','ic-arrow-down', '10', '7')
+		.dropdown__list
+			each item in data.list
+				.dropdown__item= item.title
