--- a/src/assets/scss/components/search-form-order.scss
+++ b/src/assets/scss/components/search-form-order.scss
@@ -54,91 +54,86 @@ html[dir="rtl"]{
 	}
 }
 
-// @media (max-width: 767px) {
-// 	.search-form{
-// 		display: flex;
-// 		justify-content: space-between;
-// 		align-items: center;
-// 		width: 100%;
+@media (max-width: 767px) {
+	.search-form-order-wrap{
+		&__btn{
+			display: inline-flex;
+			align-items: center;
+			justify-content: center;
+			vertical-align: top;
+			width: 40px;
+			height: 40px;
+			border-radius: 50%;
+			background: $color-orange;
+			box-shadow: 0px 12px 20px rgba(171, 171, 171, 0.25);
+			position: relative;
 
-// 		input[type="text"]{
-// 			width: calc(100% - 45px);
-// 			padding: 17px 0 15px;
-// 			border-bottom: 1px solid #e9e9e9;
-// 		}
+			.icon{
+				display: inline-block;
+				vertical-align: top;
+				stroke: #fff;
+			}
+		}
 
-// 		&__close{
-// 			display: inline-block;
-// 			vertical-align: top;
-// 			width: 20px;
-// 			height: 20px;
-// 			background: url(#{$path-icon}/ic-close-black.svg) no-repeat center;
-// 			background-size: contain;
-// 		}
+		&__popup{
+			display: none;
+			width: 100%;
+			border-radius: 0 0 12px 12px;
+			padding: 19px 20px 12px;
+			box-shadow: 0px 12px 20px rgba(171, 171, 171, 0.25);
 
-// 		&__btn{
-// 			display: inline-block;
-// 			vertical-align: top;
-// 			width: 40px;
-// 			height: 40px;
-// 			border-radius: 50%;
-// 			background: $color-orange;
-// 			box-shadow: 0px 12px 20px rgba(171, 171, 171, 0.25);
-// 			position: relative;
-// 		}
+			.cat-filter{
+				margin-top: 22px;
+			}
 
-// 		&__btn::after{
-// 			content: '';
-// 			display: inline-block;
-// 			width: 16px;
-// 			height: 16px;
-// 			background: url(#{$path-icon}/ic-search-white.svg) no-repeat center;
-// 			background-size: contain;
-// 			position: absolute;
-// 			@include top-center;
-// 			left: 0;
-// 			right: 0;
-// 			margin: 0 auto;
-// 		}
+			.cat-filter__sub{
+				position: static;
+				background: transparent;
+				box-shadow: none;
+				padding: 0;
+			}
+		}
 
-// 		&__popup{
-// 			display: none;
-// 			border-radius: 0 0 12px 12px;
-// 			padding: 19px 20px 12px;
-// 			box-shadow: 0px 12px 20px rgba(171, 171, 171, 0.25);
+		&__popup.active{
+			display: block;
+			background: #fff;
+			position: absolute;
+			top: 0;
+			left: 0;
+			z-index: 10;
+		}
+	}
 
-// 			.cat-filter{
-// 				margin-top: 22px;
-// 			}
+	.search-form-order{
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		width: 100%;
 
-// 			.cat-filter__sub{
-// 				position: static;
-// 				background: transparent;
-// 				box-shadow: none;
-// 				padding: 0;
-// 			}
-// 		}
+		input[type="text"]{
+			width: calc(100% - 45px);
+			padding: 17px 0 15px;
+			border-bottom: 1px solid #e9e9e9;
+		}
 
-// 		&__popup.active{
-// 			display: block;
-// 			background: #fff;
-// 			position: absolute;
-// 			top: 0;
-// 			left: 0;
-// 			z-index: 10;
-// 		}
+		&__close{
+			display: inline-block;
+			vertical-align: top;
 
-// 		input[type="submit"],
-// 		button{
-// 			display: none;
-// 		}
-// 	}
+			.icon{fill: #000}
+		}
 
-// 	html[dir="rtl"]{
-// 		.search-form{
-// 			input[type="text"]{
-// 				padding: 17px 0 15px;
-// 			}
-// 		}
-// 	}
-// }
+		input[type="submit"],
+		button{
+			display: none;
+		}
+	}
+
+	html[dir="rtl"]{
+		.search-form-order{
+			input[type="text"]{
+				padding: 17px 0 15px;
+			}
+		}
+	}
+}
