--- a/src/assets/scss/components/dropdown.scss
+++ b/src/assets/scss/components/dropdown.scss
@@ -56,7 +56,8 @@
 	}
 
 	&__icon{margin-right: 20px;}
-	&__icon img{
+	&__icon img,
+	&__icon .icon{
 		display: inline-block;
 		vertical-align: middle;
 	}
