--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -5,8 +5,9 @@ block variables
 	- 
 		var pagelist = [
 			{href: 'food-menu.html',name:'Food menu'},
-			{href: 'food-menu-popup.html',name:'food menu popup + order'},
-			{href: 'food-menu-cards.html',name:'food menu cards'},
+			{href: 'food-menu-popup.html',name:'Food menu popup + order'},
+			{href: 'food-menu-cards.html',name:'Food menu cards'},
+			{href: 'side-menu-mobile.html',name:'Side menu mobile'},
 			{href: 'typography.html',name:'Typography'},
 		];
 
