--- a/src/pug/pages/side-menu-mobile.pug
+++ b/src/pug/pages/side-menu-mobile.pug
@@ -2,6 +2,8 @@ extends ../layout/main
 
 block variables
 	- var title = 'Food menu';
+	- var shadow = true;
+	- var mob_sidebar = "active";
 
 block content
 	section.container
