--- a/src/pug/pages/typography.pug
+++ b/src/pug/pages/typography.pug
@@ -266,40 +266,40 @@ block content
 								+svg('ic-crown','ic-crown ic-white', '16', '16')
 						.type-icon__name ic-crown
 						
-			//- 		.type-icon__item
-			//- 			.type-icon__img
-			//- 					+svg('ic-dashboard','ic-dashboard ic-white', '24', '24')
-			//- 			.type-icon__name ic-dashboard
+					//- .type-icon__item
+					//- 	.type-icon__img
+					//- 			+svg('ic-dashboard','ic-dashboard ic-white', '24', '24')
+					//- 	.type-icon__name ic-dashboard
 
-			//- 		.type-icon__item
-			//- 			.type-icon__img
-			//- 					+svg('ic-calls','ic-calls ic-white', '24', '24')
-			//- 			.type-icon__name ic-calls
+					.type-icon__item
+						.type-icon__img
+								+svg('ic-calls','ic-calls ic-white', '24', '24')
+						.type-icon__name ic-calls
 							
-			//- 		.type-icon__item
-			//- 			.type-icon__img
-			//- 					+svg('ic-clients','ic-clients ic-white', '24', '24')
-			//- 			.type-icon__name ic-clients
+					//- .type-icon__item
+					//- 	.type-icon__img
+					//- 			+svg('ic-clients','ic-clients ic-white', '24', '24')
+					//- 	.type-icon__name ic-clients
 							
-			//- 		.type-icon__item
-			//- 			.type-icon__img
-			//- 					+svg('ic-food','ic-food ic-white', '24', '24')
-			//- 			.type-icon__name ic-food
+					//- .type-icon__item
+					//- 	.type-icon__img
+					//- 			+svg('ic-food','ic-food ic-white', '24', '24')
+					//- 	.type-icon__name ic-food
 							
-			//- 		.type-icon__item
-			//- 			.type-icon__img
-			//- 					+svg('ic-orders','ic-orders ic-white', '24', '24')
-			//- 			.type-icon__name ic-orders
+					//- .type-icon__item
+					//- 	.type-icon__img
+					//- 			+svg('ic-orders','ic-orders ic-white', '24', '24')
+					//- 	.type-icon__name ic-orders
 
-			//- 		.type-icon__item
-			//- 			.type-icon__img
-			//- 					+svg('ic-sms','ic-sms ic-white', '20', '14')
-			//- 			.type-icon__name ic-sms
+					//- .type-icon__item
+					//- 	.type-icon__img
+					//- 			+svg('ic-sms','ic-sms ic-white', '20', '14')
+					//- 	.type-icon__name ic-sms
 							
-			//- 		.type-icon__item
-			//- 			.type-icon__img
-			//- 					+svg('ic-time','ic-time ic-white', '24', '24')
-			//- 			.type-icon__name ic-time
+					.type-icon__item
+						.type-icon__img
+								+svg('ic-time','ic-time ic-white', '24', '24')
+						.type-icon__name ic-time
 
 			//- 		.type-icon__item
 			//- 			.type-icon__img
@@ -520,10 +520,10 @@ block content
 						+svg('ic-history','ic-history', '16', '16')
 					.type-icon__name ic-history
 
-			//- 	//- .type-icon__item
-			//- 	//- 	.type-icon__img
-			//- 	//- 		+svg('ic-address','ic-address', '14', '18')
-			//- 	//- 	.type-icon__name ic-address
+				.type-icon__item
+					.type-icon__img
+						+svg('ic-address','ic-address', '14', '18')
+					.type-icon__name ic-address
 
 			//- 	//- .type-icon__item
 			//- 	//- 	.type-icon__img
