--- a/src/assets/scss/components/sidebar-order.scss
+++ b/src/assets/scss/components/sidebar-order.scss
@@ -40,99 +40,107 @@ html[dir="rtl"]{
 	}
 }
 
-// @media (max-width: 767px) {
-// 	.mob-sidebar{
-// 		display: flex;
-// 		flex-direction: column;
-// 		justify-content: space-between;
-// 		width: 80%;
-// 		height: 100vh;
-// 		overflow-y: auto;
-// 		overflow-x: hidden;
-// 		border-radius: 0 20px 20px 0;
-// 		background: #f3f5f8;
-// 		padding: 24px 20px;
-// 		position: fixed;
-// 		top: 0;
-// 		left: 0;
-// 		z-index: 100;
+@media (max-width: 767px) {
+	.mob-sidebar{
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		width: 80%;
+		height: 100vh;
+		overflow-y: auto;
+		overflow-x: hidden;
+		border-radius: 0 20px 20px 0;
+		background: #f3f5f8;
+		padding: 24px 20px;
+		position: fixed;
+		top: 0;
+		left: -100%;
+		z-index: 1010;
+		transition: left 0.3s ease 0s;
 
-// 		&__top{
-// 			margin-bottom: 20px;
-// 		}
+		&.active{left: 0;}
 
-// 		&__bottom .btn{
-// 			width: 100%;
-// 			margin-bottom: 25px;
-// 		}
+		&__top{
+			margin-bottom: 20px;
+		}
 
-// 		&__bottom .btn img{
-// 			width: 20px;
-// 		}
+		&__bottom .btn{
+			width: 100%;
+			margin-bottom: 25px;
+		}
 
-// 		&__time{
-// 			padding-bottom: 20px;
-// 			margin-bottom: 20px;
-// 			border-bottom: 1px solid #e9e9e9;
-// 		}
-// 	}
+		&__bottom .btn img{
+			width: 20px;
+		}
 
-// 	.mob-sidebar-delivery{
-// 		margin-bottom: 32px;
+		&__time{
+			padding-bottom: 20px;
+			margin-bottom: 20px;
+			border-bottom: 1px solid #e9e9e9;
+		}
+	}
 
-// 		&__name{
-// 			@include font(normal, 500, 1.4rem, 1.2, $color-red);
-// 			letter-spacing: 0.03em;
-// 			margin-bottom: 9px;
-// 		}
+	.mob-sidebar-delivery{
+		margin-bottom: 32px;
 
-// 		&__address{
-// 			@include font(normal, normal, 0.875rem, 1.2, $color-grey);
-// 			margin-bottom: 10px;
-// 		}
+		&__name{
+			@include font(normal, 500, 1.4rem, 1.2, $color-red);
+			letter-spacing: 0.03em;
+			margin-bottom: 9px;
+		}
 
-// 		&__list{
-// 			display: flex;
-// 			flex-wrap: wrap;
-// 			align-items: center;
-// 		}
+		&__address{
+			@include font(normal, normal, 0.875rem, 1.2, $color-grey);
+			margin-bottom: 10px;
+		}
 
-// 		&__item:not(:last-child){
-// 			margin-right: 14px;
-// 		}
-// 	}
+		&__list{
+			display: flex;
+			flex-wrap: wrap;
+			align-items: center;
+		}
 
-// 	.mob-sidebar-address{
-// 		display: flex;
-// 		justify-content: space-between;
-// 		align-items: center;
+		&__item:not(:last-child){
+			margin-right: 14px;
+		}
+	}
 
-// 		&__icon{
-// 			display: inline-block;
-// 			width: 24px;
-// 			height: 24px;
-// 			background: url(#{$path-icon}/ic-address.svg) no-repeat center;
-// 			background-size: contain;
-// 		}
+	.mob-sidebar-address{
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
 
-// 		&__text{
-// 			width: calc(100% - 44px);
-// 			@include font(normal, normal, 1rem, 1.2, #4a4a4a);
-// 		}
-// 	}
+		&__icon{
+			display: inline-flex;
+			justify-content: center;
+			width: 24px;
+			height: 24px;
+		}
 
-// 	html[dir="rtl"]{
-// 		.mob-sidebar{
-// 			left: auto;
-// 			right: 0;
-// 			border-radius: 20px 0 0 20px;
-// 		}
+		&__text{
+			width: calc(100% - 44px);
+			@include font(normal, normal, 1rem, 1.2, #4a4a4a);
+		}
+	}
 
-// 		.mob-sidebar-delivery{
-// 			&__item:not(:last-child){
-// 				margin-right: 0;
-// 				margin-left: 14px;
-// 			}
-// 		}
-// 	}
-// }
+	html[dir="rtl"]{
+		.mob-sidebar{
+			left: auto;
+			right: -100%;
+			border-radius: 20px 0 0 20px;
+			transition: right 0.3s ease 0s;
+
+			&.active{
+				right: 0;
+				left: auto;
+			}
+		}
+
+		.mob-sidebar-delivery{
+			&__item:not(:last-child){
+				margin-right: 0;
+				margin-left: 14px;
+			}
+		}
+	}
+}
