--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -8,6 +8,7 @@ block variables
 			{href: 'food-menu-popup.html',name:'Food menu popup + order'},
 			{href: 'food-menu-cards.html',name:'Food menu cards'},
 			{href: 'side-menu-mobile.html',name:'Side menu mobile'},
+			{href: 'login.html',name:'Login'},
 			{href: 'typography.html',name:'Typography'},
 		];
 
