--- a/src/pug/pages/typography.pug
+++ b/src/pug/pages/typography.pug
@@ -351,6 +351,11 @@ block content
 
 				.type-icon__item
 					.type-icon__img
+						+svg('ic-close-grad','ic-close-grad', '20', '20')
+					.type-icon__name ic-close-grad
+
+				.type-icon__item
+					.type-icon__img
 						+svg('ic-arrow-down','ic-arrow-down', '12', '8')
 					.type-icon__name ic-arrow-down
 
