--- a/src/assets/scss/components/popup.scss
+++ b/src/assets/scss/components/popup.scss
@@ -6,7 +6,7 @@
 	border-radius: 12px;
 	box-shadow: 0px 12px 20px rgba(65, 65, 65, 0.25);
 	margin: 0 auto;
-	padding: 40px;
+	padding: 50px 40px 40px;
 	background: #fff;
 	position: fixed;
 	@include top-center;
@@ -40,7 +40,7 @@
 		height: 32px;
 		position: absolute;
 		top: -27px;
-		right: 0;
+		right: -17px;
 		cursor: pointer;
 
 		.icon{
