--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -9,6 +9,7 @@ block variables
 			{href: 'food-menu-cards.html',name:'Food menu cards'},
 			{href: 'side-menu-mobile.html',name:'Side menu mobile'},
 			{href: 'login.html',name:'Login'},
+			{href: 'sms-code.html',name:'Sms code'},
 			{href: 'typography.html',name:'Typography'},
 		];
 
