--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -10,6 +10,7 @@ block variables
 			{href: 'side-menu-mobile.html',name:'Side menu mobile'},
 			{href: 'login.html',name:'Login'},
 			{href: 'sms-code.html',name:'Sms code'},
+			{href: 'future-order.html',name:'Future order'},
 			{href: 'typography.html',name:'Typography'},
 		];
 
