--- a/src/assets/scss/components/popup.scss
+++ b/src/assets/scss/components/popup.scss
@@ -62,7 +62,7 @@
 	}
 
 	&__text{
-		max-width: 65%;
+		max-width: 70%;
 		@include font(normal, normal, 1rem, 1.3, $color-grey);
 		text-align: center;
 		margin: -22px auto 30px;
@@ -120,7 +120,10 @@
 			min-height: 125px;
 		}
 
+		&__text{max-width: 100%;}
+
 		&__top{
+			min-height: 287px;
 			padding: 20px 20px 70px;
 			position: relative;
 		}
@@ -158,7 +161,7 @@
 
 		&__content{
 			// height: 444px;
-			height: calc(100% - 265px);
+			height: calc(100% - 300px);
 			padding: 56px 20px 20px;
 		}
 
@@ -184,23 +187,16 @@
 
 		&__back{
 			display: inline-block;
-			padding-left: 22px;
 			@include font(normal, 500, 1rem, 1, #fff);
 			text-transform: uppercase;
 			margin-bottom: 23px;
 			position: relative;
-		}
 
-		// &__back::before{
-		// 	content: '';
-		// 	display: inline-block;
-		// 	height: 12px;
-		// 	width: 16px;
-		// 	background: url(#{$path-icon}/ic-arrow-left.svg) no-repeat center;
-		// 	position: absolute;
-		// 	@include top-center;
-		// 	left: 0;
-		// }
+			.icon{
+				fill: #fff;
+				margin-right: 10px;
+			}
+		}
 
 		.credit-card,
 		.pay-choose-form,
@@ -219,6 +215,13 @@
 			.h2,
 			&__text{
 				text-align: right;
+			}
+
+			&__back{
+				.icon{
+					margin-right: 0;
+					margin-left: 10px;
+				}
 			}
 		}
 	}
