--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -11,6 +11,7 @@ block variables
 			{href: 'login.html',name:'Login'},
 			{href: 'sms-code.html',name:'Sms code'},
 			{href: 'future-order.html',name:'Future order'},
+			{href: 'cart-not-empty.html',name:'Cart not empty'},
 			{href: 'typography.html',name:'Typography'},
 		];
 
