--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -12,6 +12,9 @@ block variables
 			{href: 'sms-code.html',name:'Sms code'},
 			{href: 'future-order.html',name:'Future order'},
 			{href: 'cart-not-empty.html',name:'Cart not empty'},
+			{href: 'get-eat.html',name:'Get eat'},
+			{href: 'get-eat-error.html',name:'Get eat (error)'},
+			{href: 'get-eat-take-away.html',name:'Get eat (take away)'},
 			{href: 'typography.html',name:'Typography'},
 		];
 
