--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -15,6 +15,7 @@ block variables
 			{href: 'get-eat.html',name:'Get eat'},
 			{href: 'get-eat-error.html',name:'Get eat (error)'},
 			{href: 'get-eat-take-away.html',name:'Get eat (take away)'},
+			{href: 'paymont-methods.html',name:'Paymont methods'},
 			{href: 'typography.html',name:'Typography'},
 		];
 
