--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -16,6 +16,7 @@ block variables
 			{href: 'get-eat-error.html',name:'Get eat (error)'},
 			{href: 'get-eat-take-away.html',name:'Get eat (take away)'},
 			{href: 'paymont-methods.html',name:'Paymont methods'},
+			{href: 'card-details.html',name:'Card details'},
 			{href: 'typography.html',name:'Typography'},
 		];
 
