--- a/src/pug/pages/typography.pug
+++ b/src/pug/pages/typography.pug
@@ -187,14 +187,16 @@ block content
 				| VIP Club join request sent!
 				.notice__close
 					+svg('ic-close-circle','ic-close-circle', '16', '16')
-			//- //- br
-			//- //- br
-			//- //- .h2 Нестандартный checkbox
-			//- //- .input-check
-			//- //- 	input#checkbox1(type='checkbox', checked='checked')
-			//- //- 	label.input-check__label(for='checkbox1')
-			//- //- 		span.input-check__mark
-			//- //- 		span.input-check__text label
+			br
+			br
+			.h2 Нестандартный checkbox
+			.input-check
+				input#checkbox1(type='checkbox', checked='checked')
+				label.input-check__label(for='checkbox1')
+					span.input-check__mark
+						+svg('ic-check','ic-check', '12', '9')
+
+					span.input-check__text label
 
 			//- //- br
 			//- //- br
