--- a/src/assets/scss/components/popup.scss
+++ b/src/assets/scss/components/popup.scss
@@ -6,7 +6,7 @@
 	border-radius: 12px;
 	box-shadow: 0px 12px 20px rgba(65, 65, 65, 0.25);
 	margin: 0 auto;
-	padding: 50px 40px 40px;
+	padding: 50px 40px 40px 20px;
 	background: #fff;
 	position: fixed;
 	@include top-center;
@@ -81,7 +81,7 @@
 
 	.profile{width: 87%;}
 	.order-history{width: 81%;}
-	.credit-card{width: 77%;}
+	.credit-card{width: 81.5%;}
 	.pay-form{width: 81%;}
 	.pay-choose-form{width: 87%;}
 
