--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -17,6 +17,7 @@ block variables
 			{href: 'get-eat-take-away.html',name:'Get eat (take away)'},
 			{href: 'paymont-methods.html',name:'Paymont methods'},
 			{href: 'card-details.html',name:'Card details'},
+			{href: 'card-verification.html',name:'Card verification'},
 			{href: 'typography.html',name:'Typography'},
 		];
 
