Paymont method popup

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -18,6 +18,7 @@ block variables
 			{href: 'paymont-methods.html',name:'Paymont methods'},
 			{href: 'card-details.html',name:'Card details'},
 			{href: 'card-verification.html',name:'Card verification'},
+			{href: 'paymont-method-popup.html',name:'Paymont method popup'},
 			{href: 'typography.html',name:'Typography'},
 		];
 
